--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,9 @@
+body {
+  overflow: hidden; /* 禁止页面滚动 */
+  position: fixed; /* 固定页面位置 */
+  width: 100%;
+  height: 100%;
+}
 #app, body, html {
     width: 100%;
     height: 100%;
